# algorithms

./: .gitignore  CMakeLists.txt  calgo.pc.in
include/algorithms/: algorithms.h  bezier.h  bounds.h  cam.h  color.h  common.h  io.h  kdtree.h  primitive.h  ray.h  sorts.h  types.h  utils.h  vec.h
src/: algorithms.c  bounds.c  kdtree.c  mat.c  primitive.c  sorts.c  vec.c
